--- a/chatbot/.env.example
+++ b/chatbot/.env.example
@@ -1,13 +1,3 @@
-# Server Configuration
-PORT=3000
-
-# Database Configuration
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=your_username
-DATABASE_PASSWORD=your_password
-DATABASE_NAME=your_database_name
-
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key
-JWT_EXPIRATION_TIME=3600 
+SUPERTONE_API_KEY=TTS_KEY
+OPENAI_API_KEY=OPENAI_KEY
+GROK_API_KEY=GROK_KEY
